2001-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject: ([+initialize]) Move GSSetLocale() after platform
	specific code with conditionally compiled variable declarations.
	Should make this work on BSD and MINGW again.

2001-05-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSObject.m ([NSObject +initialize]): fixed a FreeBSD specific
	code bug introduced by the call of GSSetLocaleC().

Wed May  2 13:19:13 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/UnixFileHandle.m (id): Redefine `id' when including
	openssl header files to avoid syntax errors from 3.x serie gcc
	compilers.

2001-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone: ([-initWithName:]) fix for trivial locking bug.

2001-04-30  Adam Fedor  <fedor@gnu.org>

	* Source/behavior.m: Rewrite to work with NeXT runtime.
	* Headers/gnustep/base/objc-gnu2next.h: Add some extra translations.

2001-04-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: parseQuotedString() handle \U escape sequences
	of eight digit hex encoded unicode values.
	([descriptionWithLocale:indent:to@]) handle unicode strings by using
	\U escape sequences in output C string.

2000-04-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSString.m: 
	Corrected bug in last optimization for the parsing of property
	list. Now the bitmap representation is retained not the
	characterset itself. This did cause undeterministic problems when
	reading in the Info.plist.

2001-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Use RETAIN/RELEASE
	* Source/GSLocale.m: Set up NSDecimalSeparator and NSThousandsSeparator
	from locale if possible.  Fix bug dereferencing nil pointer.
	* Source/GSFormat.m: Hack to rewrite output from sprintf of floats and
	doubles to use the value in NSDecimalSeparator.

2001-04-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSString.m: Minor optimization for parsing property